--- a/sass/components/_section-team.scss
+++ b/sass/components/_section-team.scss
@@ -28,9 +28,12 @@
   }
   @media screen and (min-width: 768px) {
     display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
   }
   @media screen and (min-width: 1200px) {
     display: flex;
+    flex-wrap: nowrap;
   }
   margin-top: 50px;
 }
@@ -40,6 +43,7 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   @media screen and (max-width: 767px) {
+    width: 100%;
     margin-right: 0;
     &:not(:last-child) {
       margin-bottom: 30px;
@@ -50,10 +54,29 @@
     padding-bottom: 24px;
   }
   @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+    & img {
+      width: 100%;
+    }
+    &:not(:nth-last-child(-n + 2)) {
+      margin-bottom: 30px;
+    }
+    &:not(:nth-child(2n)) {
+      margin-right: 30px;
+    }
+    padding-bottom: 24px;
   }
   @media screen and (min-width: 1200px) {
+    width: 100%;
+    margin-bottom: 0;
+    & img {
+      width: 100%;
+    }
     &:not(:last-child) {
       margin-right: 30px;
+    }
+    &:not(:nth-last-child(-n + 2)) {
+      margin-bottom: 0;
     }
   }
 }
@@ -78,12 +101,6 @@
   justify-content: center;
 
   margin-top: 16px;
-  // @media screen and (max-width: 1199px) {
-  //   margin-bottom: 24px;
-  // }
-  @media screen and (min-width: 1200px) {
-    margin-bottom: 30px;
-  }
 }
 .team-link {
   display: inline-flex;
