--- a/css/main.css
+++ b/css/main.css
@@ -1032,12 +1032,14 @@ a {
 @media screen and (max-width: 1199px) {
   .regular-customers h2 {
     font-size: 28px;
+    margin-bottom: 30px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .regular-customers h2 {
     font-size: 36px;
+    margin-bottom: 50px;
   }
 }
 
@@ -1066,7 +1068,8 @@ a {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-top: 50px;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
 }
 
@@ -1074,7 +1077,7 @@ a {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  width: 170px;
+  width: 100%;
   height: 90px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -1104,17 +1107,36 @@ a {
   .regular-customers-item {
     width: calc((100% - 30px) / 2);
   }
+  .regular-customers-item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+  .regular-customers-item:not(:nth-last-child(-n + 2)) {
+    margin-bottom: 30px;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .regular-customers-item {
     width: calc((100% - 2 * 30px) / 3);
   }
+  .regular-customers-item:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+  .regular-customers-item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
+  .regular-customers-item {
+    width: calc((100% - 5 * 30px) / 6);
+    margin-bottom: 0;
+  }
   .regular-customers-item:not(:last-child) {
     margin-right: 30px;
+  }
+  .regular-customers-item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 0;
   }
 }
 
