--- a/sass/components/_section-regular-customers.scss
+++ b/sass/components/_section-regular-customers.scss
@@ -13,9 +13,11 @@
     text-align: center;
     @media screen and (max-width: 1199px) {
       font-size: 28px;
+      margin-bottom: 30px;
     }
     @media screen and (min-width: 1200px) {
       font-size: 36px;
+      margin-bottom: 50px;
     }
   }
 }
@@ -30,12 +32,13 @@
   }
   @media screen and (min-width: 1200px) {
     display: flex;
-    margin-top: 50px;
+    flex-wrap: nowrap;
+    // justify-content: space-between;
   }
 }
 .regular-customers-link {
   display: inline-flex;
-  width: 170px;
+  width: 100%;
   height: 90px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -54,14 +57,32 @@
 .regular-customers-item {
   @media screen and (max-width: 767px) {
     width: calc((100% - 30px) / 2);
+    &:not(:nth-child(2n)) {
+      margin-right: 30px;
+    }
+    &:not(:nth-last-child(-n + 2)) {
+      margin-bottom: 30px;
+    }
   }
   @media screen and (min-width: 768px) {
     width: calc((100% - 2 * 30px) / 3);
+    &:not(:nth-child(3n)) {
+      margin-right: 30px;
+    }
+    &:not(:nth-last-child(-n + 3)) {
+      margin-bottom: 30px;
+    }
   }
   @media screen and (min-width: 1200px) {
+    width: calc((100% - 5 * 30px) / 6);
+
     &:not(:last-child) {
       margin-right: 30px;
     }
+    &:not(:nth-last-child(-n + 3)) {
+      margin-bottom: 0;
+    }
+    margin-bottom: 0;
   }
 }
 
