--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -15,8 +15,11 @@
   transform: translate(-50%, -50%) scale(0.6);
 }
 .modal {
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   position: absolute;
-  min-width: 528px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
@@ -25,6 +28,12 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform $time;
+  @media screen and (max-width: 1199px) {
+    min-width: 450px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+  }
 }
 .modal-closed {
   position: absolute;
@@ -55,14 +64,20 @@
 }
 
 .modal-title {
-  margin-top: 40px;
+  margin-top: 0;
   margin-left: 0;
   margin-right: 0;
   margin-bottom: 2px;
   font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
   text-align: center;
+  @media screen and (max-width: 1199px) {
+    font-size: 20px;
+    line-height: 1.5;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 20px;
+    line-height: 1.15;
+  }
 }
 .modal-title-name {
   margin-top: 10px;
@@ -77,7 +92,7 @@
   position: relative;
 
   & > input {
-    width: 448px;
+    width: 100%;
     height: 40px;
     padding-left: 42px;
     padding-top: 1px;
@@ -86,7 +101,7 @@
   }
 }
 .modal-textarea {
-  width: 448px;
+  width: 100%;
   height: 120px;
 }
 .modal-input {
@@ -110,14 +125,11 @@
   cursor: pointer;
 }
 .modal-form-list {
-  padding-left: 40px;
-  padding-right: 40px;
-  padding-bottom: 40px;
   display: inline-flex;
   flex-direction: column;
   margin-left: auto;
   margin-right: auto;
-  width: 528px;
+  width: 100%;
 }
 .modal-form-item {
   display: inline-flex;
@@ -135,7 +147,7 @@
   transition: fill $time;
 }
 .modal-coments {
-  width: 448px;
+  width: 100%;
   height: 120px;
   padding-top: 12px;
   padding-bottom: 12px;
@@ -156,9 +168,15 @@
     display: flex;
     align-items: center;
     font-weight: 400;
+    color: $text-color;
+  }
+  @media screen and (max-width: 1199px) {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+  @media screen and (min-width: 1200px) {
     font-size: 14px;
     line-height: 1.71;
-    color: $text-color;
   }
 }
 .box-police-checkbox {
