--- a/sass/components/_common-style.scss
+++ b/sass/components/_common-style.scss
@@ -10,6 +10,9 @@ body {
   color: $title-color;
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
+  &.modal-open {
+    overflow: hidden;
+  }
 }
 h1,
 h2,
