--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -5,6 +5,20 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
+  overflow-y: scroll;
+
+  @media screen and (max-width: 767px) {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 93px;
+    padding-bottom: 93px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding-left: 159px;
+    padding-right: 159px;
+    padding-top: 208px;
+    padding-bottom: 208px;
+  }
 }
 .backdrop.is-hidden {
   visibility: hidden;
@@ -15,23 +29,26 @@
   transform: translate(-50%, -50%) scale(0.6);
 }
 .modal {
+  width: 100%;
+
   padding-left: 40px;
   padding-right: 40px;
   padding-top: 40px;
   padding-bottom: 40px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
   background: $white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transition: transform $time;
   @media screen and (max-width: 1199px) {
-    min-width: 450px;
+    position: relative;
+    width: 450px;
   }
   @media screen and (min-width: 1200px) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform $time;
     width: 528px;
   }
 }
