--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,4 +1,7 @@
 .hero {
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
   color: $white-color;
   background-color: #2f303a;
   text-align: center;
@@ -22,7 +25,7 @@
 .container-hero {
   margin-left: auto;
   margin-right: auto;
-  width: 100%;
+  max-width: 1600px;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
